[package]
authors = ["Tim Ryan <tim@timryan.org>"]
description = "Rust macro to build std::process::Command objects with shell syntax. Uses macro_rules! and works on stable. But doesn't depend on failure."
license = "MIT OR Apache-2.0"
name = "tb2f_commandspec"
repository = "https://github.com/SirJson/tb2f_commandspec"
version = "0.12.2"

[dependencies]
shlex = "0.1.1"
lazy_static = "1.1.0"
log = "0.4.6"

[target.'cfg(unix)'.dependencies]
nix = "0.11.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
kernel32-sys = "0.2.2"
